--- a/package.json
+++ b/package.json
@@ -37,8 +37,13 @@
     "copy-webpack-plugin": "^6.1.1",
     "cross-env": "^7.0.2",
     "css-loader": "^4.3.0",
-    "eslint": "^7.9.0",
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb": "^18.2.0",
     "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.21.3",
+    "eslint-plugin-react-hooks": "^4.0.0",
     "file-loader": "^6.1.0",
     "html-loader": "^1.3.0",
     "html-webpack-plugin": "^4.4.1",
