--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@babel/polyfill": "^7.11.5",
     "aos": "^3.0.0-beta.6",
     "core-js": "^3.6.5",
+    "normalize.css": "^8.0.1",
     "reset-css": "^5.0.1"
   }
 }
