--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
   },
   "rules": {
     "semi": 2,
-    "global-require": 0
+    "global-require": 0,
+    "import/prefer-default-export": 0
   }
 }
