--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,7 @@
   "rules": {
     "semi": 2,
     "global-require": 0,
-    "import/prefer-default-export": 0
+    "import/prefer-default-export": 0,
+    "class-methods-use-this": 0
   }
 }
