--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "lint": "npm run lint:styles; npm run lint:scripts",
     "lint:styles": "stylelint src",
     "lint:scripts": "eslint src",
-    "build": "cross-env NODE_ENV=production webpack --config webpack/webpack.config.prod.js --colors",
+    "build": "webpack --config webpack/webpack.config.prod.js --colors",
     "dev": "webpack-dev-server --open --config webpack/webpack.config.dev.js",
     "start": "npm run build && node server.js"
   },
@@ -37,7 +37,6 @@
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.1.1",
-    "cross-env": "^7.0.2",
     "css-loader": "^4.3.0",
     "eslint": "^7.2.0",
     "eslint-config-airbnb": "^18.2.0",
