--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "lint": "npm run lint:styles; npm run lint:scripts",
     "lint:styles": "stylelint src",
     "lint:scripts": "eslint src",
-    "build": "webpack --config webpack/webpack.config.prod.js --colors",
+    "build": "cross-env NODE_ENV=production webpack --config webpack/webpack.config.prod.js --colors",
     "dev": "webpack-dev-server --open --config webpack/webpack.config.dev.js",
-    "start": "npm run build && node server.js"
+    "start": "node server.js",
+    "heroku-postbuild": "npm run build"
   },
   "heroku-run-build-script": true,
   "repository": {
@@ -56,8 +57,6 @@
     "stylelint": "^13.7.1",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-webpack-plugin": "^2.1.0",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.1.4"
   },
@@ -67,8 +66,11 @@
     "axios": "^0.20.0",
     "bootstrap-4-grid": "^3.4.0",
     "core-js": "^3.6.5",
+    "cross-env": "^7.0.2",
     "express": "^4.17.1",
     "reset-css": "^5.0.1",
-    "stylelint-scss": "^3.18.0"
+    "stylelint-scss": "^3.18.0",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   }
 }
